# ITC-Solar-Panel-Suitability-Mapping

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/: buildings_with_shading.json  buildings_with_solar_analysis.json  footprints.json  processed_buildings.json  processed_test_buildings.json  ranked_buildings.json  ranked_test_buildings.json  solar.json  top_100_buildings.json  top_20_test_buildings.json
docs/: api_documentation.md
notebooks/: 01_data_exploration.ipynb  02_algorithm_development.ipynb  03_visualization_demo.ipynb
outputs/: .gitkeep
outputs/maps/: solar_interactive_map.html  top_100_buildings.html
outputs/reports/: summary_report.json  top_20_priority_buildings.csv
src/: __init__.py  api.py  data_acquisition.py  geometry.py  ranking.py  shading.py  solar.py  spatial_search.py  visualization.py
tests/: test_api.py  test_data_acquisition.py  test_geometry.py  test_ranking.py  test_shading.py  test_solar.py
tools/: debug_visualization.py
